gccida/g2/canon_rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_rtx/src/alias.c:1524:35: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( x->fld[0].rtx == v5 && ( rtx)x[1] == v6 ) 
                                  ^~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_rtx/src/alias.c:1536:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)x + 2), v5, v6); 
                               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_rtx/src/obj/alias.o] Error 1
